# asr-eval-lib

./: .gitignore  README.md  pyproject.toml
src/asr_eval_lib/: __init__.py  errors.py  evaluator.py  glm_composition.py  models.py  normalization.py  profiles.py  sctk.py  tokenization.py  trn.py
src/asr_eval_lib/glm/de/: orthographic.glm  orthographic_dates.glm  orthographic_numbers.glm  phonetic_ipa.glm  phonetic_sampa.glm  phonetic_xsampa.glm  transliteration.glm
src/asr_eval_lib/glm/en/: orthographic.glm  phonetic_ipa.glm  phonetic_sampa.glm  phonetic_xsampa.glm  transliteration.glm
tests/: test_evaluator.py  test_glm_composition.py  test_normalization_tokenization.py  test_profiles.py  test_sctk.py  test_trn.py
