[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-eval-lib"
version = "0.1.0"
description = "Python wrapper around SCTK/SCLITE for WER, CER, and phoneme error rates with language-specific GLM profiles."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Christopher Witzl" }
]
keywords = ["asr", "wer", "cer", "per", "sclite", "sctk", "glm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
asr_eval_lib = ["glm/de/*.glm", "glm/en/*.glm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
